add concurrent method query status